# food_supply_iq

./: .dockerignore  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  PROGRESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json
api/alembic/: env.py
api/alembic/versions/: 0001_enable_postgis.py  417dd0278b7a_account_repeat_metrics.py  4d8b94a729cb_core_entities.py  64eece8ad7bc_visit_media.py  6f6f326ca6da_kpi_targets.py  f040c6166a44_account_status_history.py
api/app/: __init__.py  config.py  db.py  deps.py  main.py  security.py  seed.py  worker.py
api/app/models/: __init__.py  account.py  account_status_history.py  base.py  enums.py  kpi_target.py  order.py  product.py  sample.py  user.py  visit.py  visit_media.py
api/app/routers/: accounts.py  activity.py  auth.py  contacts.py  funnel.py  geo.py  kpis.py  orders.py  products.py  samples.py  users.py  visits.py
api/app/schemas/: account.py  activity.py  auth.py  common.py  contact.py  funnel.py  geo.py  kpi.py  media.py  order.py  product.py  profile.py  sample.py  status.py  visit.py
api/app/services/: geocoding.py  metrics.py  storage.py
api/app/utils/: geo.py  transitions.py
api/scripts/: export_openapi.py
api/tests/: test_accounts.py  test_activity.py  test_auth_flow.py  test_contacts.py  test_funnel.py  test_geo.py  test_health.py  test_kpis.py  test_media.py  test_orders.py  test_products.py  test_samples.py  test_security.py  test_visits.py
docs/: deploy.md  (+2 more)
(+61 files in other folders)
